--- a/index.html
+++ b/index.html
@@ -7,12 +7,32 @@
     <title>Document</title>
 </head>
 <body>
-    <header class=”cabecalho”>
-        <img class=”cabecalho-imagem” src=”./img/alurastart logo 1.png” alt=”logo da alura
-        start”>
-        <ul class=”cabecalho-lista-item”>
-            <li class=”cabecalho-lista-item”>Estudante</li>
-            <li class=”cabecalho-lista-item”>Escola</li>
-        </ul>
+    <center>
+    <img src="rep-festival-2022-radio-mood-foi-midia-oficial-do-evento.jpeg.jpeg">
+    <h1>Sobre o REP FESTIVAL</h1>
+    </center>
+<p>Sobre o REP FESTIVAL Em 2023, os 50 mil ingressos para o dia de shows do REP Festival, no Rio de Janeiro, esgotaram em menos de 24 horas.
+    Com a resposta positiva do público e a grande procura, a produção do evento resolveu migrar o REP Festival do Riocentro para o Parque dos Atletas e adicionar mais um dia de shows à programação.
+    Voltado para os amantes do rap, o Ritmo & Poesia Festival mostra como o cenário do gênero musical mudou nas últimas décadas no Brasil.</p>
+    <p>Fabricio Stofel, sócio fundador e CEO do REP Festival, relembra de onde veio a ideia de criar e produzir o evento: “Sempre existiram muitos festivais de diversos gêneros, mas de rap, não.
+    E nós sentimos vontade de ter um grande espaço para os artistas e fãs do segmento celebrarem o rap”. A edição de estreia aconteceu em 2019, seguida pela de 2020.
+    E, naquela época, Fabricio nem imaginava que o evento cresceria tanto a ponto de se tornar um dos maiores festivais de rap brasileiro.O produtor, que atua há mais de 10 anos na cena, afirma sentir muito orgulho de ter acreditado no movimento do rap.
+    “O rap chegou no lugar em que nós sempre soubemos que ele chegaria, no mainstream.</p>
+    <p>O gênero, que já sofreu preconceito por parte da população, está cada vez mais sendo consumido por públicos de diversas tribos e idades e é um dos ritmos mais ouvidos no Brasil atualmente”, explica ele.
+    A edição de 2022 do REP Festival foi a mais marcante para o produtor,ressalta que, em dois dias de evento, levaram 80 mil pessoas para acompanhar os mais de 100 shows, mudando para sempre a dinâmica de consumo do rap.
+    E, para 2023, Fabricio já promete muitas novidades. “Queremos fazer o REP Festival crescer cada vez mais e elevar o evento em todas as áreas, principalmente em estrutura e experiência”, afirma.</p>
 </body>
+<center>
+<h3>Racionas'mcs</h3>
+<img src="racionaismcs.jpg">
+<h4>L7nnon</h4>
+<img src="l7.jpeg"
+
+</center>
+<center>
+<h5>Felipe Ret</h5>
+<img src="feliperet.jpeg">
+<h6>Emicida</h6>
+<img src="emicida.jpeg">
+</center>
 </html>
