--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<style>
+body {
+    background-color: blueviolet;
+}
+</style>
 <body>
     <center>
     <img src="rep-festival-2022-radio-mood-foi-midia-oficial-do-evento.jpeg.jpeg">
@@ -21,7 +26,6 @@
     <p>O gênero, que já sofreu preconceito por parte da população, está cada vez mais sendo consumido por públicos de diversas tribos e idades e é um dos ritmos mais ouvidos no Brasil atualmente”, explica ele.
     A edição de 2022 do REP Festival foi a mais marcante para o produtor,ressalta que, em dois dias de evento, levaram 80 mil pessoas para acompanhar os mais de 100 shows, mudando para sempre a dinâmica de consumo do rap.
     E, para 2023, Fabricio já promete muitas novidades. “Queremos fazer o REP Festival crescer cada vez mais e elevar o evento em todas as áreas, principalmente em estrutura e experiência”, afirma.</p>
-</body>
 <center>
 <h3>Racionas'mcs</h3>
 <img src="racionaismcs.jpg">
@@ -35,4 +39,6 @@
 <h6>Emicida</h6>
 <img src="emicida.jpeg">
 </center>
+<center><img src="rep-festival-rj.jpg"></center>
+</body>
 </html>
